# CodeEnforce

./: .gitignore  CMakeLists.txt  Makefile  Makefile.er  build.ninja  cmake.txt  make.er.txt  make.txt  pom.xml
src/main/java/org/example/: BuildInfo.java  Main.java  SyntaxTree.java  VariableSet.java
src/main/java/org/example/cmake/: CMake.g4  CMake.interp  CMake.java  CMake.tokens  CMakeBaseListener.java  CMakeBaseVisitor.java  CMakeLexer.interp  CMakeLexer.java  CMakeLexer.tokens  CMakeListener.java  CMakeParser.java  CMakeVisitor.java
src/main/java/org/example/ninja/: Ninja.g4  Ninja.interp  Ninja.java  Ninja.tokens  NinjaBaseListener.java  NinjaBaseVisitor.java  NinjaLexer.interp  NinjaLexer.java  NinjaListener.java  NinjaParser.java  NinjaVisitor.java
src/main/java/org/example/storage/: CMakeLexer.g4
src/main/java/org/example/treeSitter/: CMake.java  Make.java  SyntaxTree.java
src/main/java/org/example/xmake/: XMake.g4  XMake.java
src/test/java/org/example/: AntlrTest.java
